fix a ton of bugs add new /unstuck command improve performance on some checks improve config file management add new comments